@@ -24,3 +24,4 @@ void jswrap_storage_erase(JsVar *name);
 void jswrap_storage_compact();
 JsVar *jswrap_storage_list();
 void jswrap_storage_debug();
+int jswrap_storage_getFree();
