@@ -26,6 +26,7 @@
             Added String.startsWith/endsWith/includes (#1302)
             parseFloat(".s") now returns NaN
             Fixed /\S+/.test(" ")
+            Added Storage.getFree() to return available space
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
